<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/number_convertor"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/b_Binary"
        android:layout_width="wrap_content"
        android:layout_height="69dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="#11132B"
        android:text="@string/binary_and_decimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <Button
        android:id="@+id/b_Hexa"
        android:layout_width="wrap_content"
        android:layout_height="69dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="#11132B"
        android:text="@string/hexadecimal_and_decimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_Binary" />

    <Button
        android:id="@+id/b_Octal"
        android:layout_width="wrap_content"
        android:layout_height="69dp"
        android:backgroundTint="#11132B"
        android:text="Octal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_Decimal"
        app:layout_constraintVertical_bias="0.279" />

    <Button
        android:id="@+id/b_Decimal"
        android:layout_width="wrap_content"
        android:layout_height="69dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="#11132B"
        android:text="@string/decimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_Hexa" />

</androidx.constraintlayout.widget.ConstraintLayout>
